# jupyter-ai-personas

./: .gitignore  .jupyter_ystore.db  LICENSE  README.md  debugging.chat  demo.chat  dev-environment.yml  gfhgd.chat  pyproject.toml  test.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run-tests.yml
jupyter_ai_personas/: __init__.py
jupyter_ai_personas/AGNO_visualization_persona/: README.md  persona.py
jupyter_ai_personas/context_retrieval_persona/: README.md  __init__.py  context_retrieval_persona.py  file_reader_tool.py  setup_rag_system.py  test_context_retrieval.ipynb
jupyter_ai_personas/data_analytics_persona/: README.md  enhancedPythonTools.py  persona.py  test_data.ipynb
jupyter_ai_personas/data_science_persona/: README.md  context_curator_persona.py  context_retriever_persona.py  data_science_persona.py  main_persona.py  rag_core.py  rag_integration_tool.py  test.py  test_notebook.ipynb  test_ynotebook_wrapper.py  ynotebook_wrapper.py
jupyter_ai_personas/emoji_persona/: __init__.py  persona.py
jupyter_ai_personas/finance_persona/: README.md  finance_README.md  persona.py
jupyter_ai_personas/knowledge_graph/: bulk_analyzer.py  code_analysis_tool.py  schema_validator.py
jupyter_ai_personas/new_context_persona/: README.md  __init__.py  context_flow.py  context_nodes.py  new_context_persona.py  test_final.py  test_new_persona.py
jupyter_ai_personas/pr_review_persona/: README.md  __init__.py  ci_tools.py  fetch_ci_failures.py  patch_persona_awareness.py  persona.py  pr_comment_tool.py  pr_tools.py  repo_analysis_tools.py  template.py
jupyter_ai_personas/software_team_persona/: README.md  persona.py  software_team_README.md  software_team_persona.py  template.py
test/: test_persona.py
tests/: conftest.py  test_ci_tools.py  test_demo.py  test_persona.py  test_pr_comment_tool.py
